--- a/hello/index.css
+++ b/hello/index.css
@@ -1,6 +1,15 @@
+*{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+}
+
 html, body{
     height: 100%;
     position: relative;
+    overflow: hidden;
 }
 body{
     background: #000;
