--- a/hello/index.css
+++ b/hello/index.css
@@ -76,6 +76,12 @@ body{
 #section2{
     /*display: none;*/
 }
+
+#section2 video{
+    width: 100%;
+    height: 100%;
+    display: block;
+}
 #section2 .light{
     opacity: 0;
 }
