--- a/hello/index.css
+++ b/hello/index.css
@@ -74,7 +74,10 @@ body{
 }
 
 #section2{
-    /*display: none;*/
+    display: none;
+}
+#section2.active{
+    display: block;
 }
 
 #section2 video{
